# ElaWidgetTools

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
ElaWidgetTools/: CMakeLists.txt
ElaWidgetToolsExample/: CMakeLists.txt  ElaWidgetToolsExample.qrc  main.cpp
